--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Souvik-Portfo<span>lio.</span></a></div>
+            <div class="logo"><a href="#"><span>Sou</span>vik-<span id="port">Port</span>fo<span>lio.</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
-                 <li><a href="https://x00o.github.io/Image-gallery/" class="menu-btn">Gallery</a></li>
+                 <li><a href="https://x00o.github.io/Image-gallery/" target="_blank" class="menu-btn">Gallery</a></li>
                 <li><a href="#teams" class="menu-btn">Friends</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
