change the file of download cv section with a new link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="column right">
                     <div class="text">I'm souvik and I'm a <span class="typing-2"></span></div>
                     <p>I am ambitious and driven. I thrive on challenges and constantly set goals for myself, so I have something to strive towards. I'm not comfortable with settling, and I'm always looking for an opportunity to do better and achieve greatness. I have done my Higher Education in Mathematics honors and I had developed new skills like codding. I have learned web development and java programming language. And I am continuously learning codding day by day.</p>
-                    <a href="https://docs.google.com/document/d/1owrgCikwj5XU2oQvG_L84QDzP5ghJw965ZlnsYKPNdk/edit?usp=sharing">Download CV</a>
+                    <a href="https://x00o.github.io/souvikbasakresume/">Download CV</a>
                 </div>
             </div>
         </div>
